// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lib/util/args > --auto-cancel-after-failures > throws error when a decimal value is set > invalid --auto-cancel-after-failures (decimal value) error 1`] = `
"Cypress encountered an error while parsing the argument: --auto-cancel-after-failures

You passed: 1.5

The error was: auto-cancel-after-failures must be an integer or false"
`;

exports[`lib/util/args > --auto-cancel-after-failures > throws error when a negative value is set > invalid --auto-cancel-after-failures (negative value) error 1`] = `
"Cypress encountered an error while parsing the argument: --auto-cancel-after-failures

You passed: true

The error was: auto-cancel-after-failures must be an integer or false"
`;

exports[`lib/util/args > --auto-cancel-after-failures > throws error when a string is set > invalid --auto-cancel-after-failures error 1`] = `
"Cypress encountered an error while parsing the argument: --auto-cancel-after-failures

You passed: foo

The error was: auto-cancel-after-failures must be an integer or false"
`;

exports[`lib/util/args > --auto-cancel-after-failures > throws error when true is set > invalid --auto-cancel-after-failures (true) error 1`] = `
"Cypress encountered an error while parsing the argument: --auto-cancel-after-failures

You passed: true

The error was: auto-cancel-after-failures must be an integer or false"
`;

exports[`lib/util/args > --config > throws if config string cannot be parsed > invalid config error 1`] = `
"Cypress encountered an error while parsing the argument: --config

You passed: xyz

The error was: Cannot parse as valid JSON"
`;

exports[`lib/util/args > --env > throws if env string cannot be parsed > invalid env error 1`] = `
"Cypress encountered an error while parsing the argument: --env

You passed: nonono

The error was: Cannot parse as valid JSON"
`;

exports[`lib/util/args > --reporterOptions > throws if reporter string cannot be parsed > invalid reporter options error 1`] = `
"Cypress encountered an error while parsing the argument: --reporterOptions

You passed: abc

The error was: Cannot parse as valid JSON"
`;

exports[`lib/util/args > --spec > throws if argument cannot be parsed > invalid spec error 1`] = `
"Cypress encountered an error while parsing the argument: --spec

You passed: {}

The error was: spec must be a string or comma-separated list"
`;
